2003-11-05  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer -processEvent:]): New
	method broken off from -receivedEvent:type:extra:forMode:.

2003-11-05 03:29  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XGServerEvent.m (-receivedEvent:type:extra:forMode:):
	Casts as lvalues will be deprecated in gcc 3.4. Thus, don't assign
	to the cWin macro. Reported by Lyndon Tremblay.

2003-11-02 02:58  Alexander Malmberg <alexander@malmberg.org>

	* Source/gsc/GSStreamContext.m Whitespace cleanups.

	(writeHex): Use index properly; don't always write the first byte.
	Use fputc() instead of fprintf() (was doing the hex conversion
	manually anyway, might as well make it efficient).

2003-11-02 02:27  Alexander Malmberg <alexander@malmberg.org>

	* Source/gsc/GSStreamContext.m (fpfloat, writeHex): Make static.

2003-10-29  Yen-Ju Chen <yjchenx@hotmail.com>

	* Source/x11/XGServerWindow.m ([XGServer -_setupRootWindow]): Always
	set WindowMaker app icon property
	([XGServer -window::::]): Idem for GNUstep window styles.
	([XGServer -stylewindow::win]): Idem.
	([XGServer -docedited::win]): Idem.
	([XGServer -setwindowlevel::]): Idem.

2003-10-22  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for X11 function prototypes (Fixes problems
	on Solaris 2.6).

2003-10-20 20:09  Alexander Malmberg <alexander@malmberg.org>

	* Tools/xpbs.m (-xProvideSelection:): Copy all characters and the
	terminating nul in XG_COMPOUND_TEXT handling.

2003-10-20 16:20  Alexander Malmberg <alexander@malmberg.org>

	* Tools/xpbs.m (+xSelectionNotify:): Don't call XGetAtomName()
	if the property is None.

2003-10-19  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/XGBitmap.m: Cache color lookup to reduce use
	of XQueryColor (based on code from Marko Riedel).

	* configure.ac: Add 2.57 prereq

2003-10-15  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Don't look for jpeg/tiff (already linked in by gui).

2003-10-08 15:58  Alexander Malmberg <alexander@malmberg.org>
